fixed:headline_txt_align_error

--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -415,6 +415,9 @@ a{
     .top-sticky-blue{
       padding: 0.75rem;
     }
+    .top-sticky-center{
+      padding: 0.75rem;
+    }
     .main-container-5{
       padding: 0.25rem 1rem;
     }
